icon-div gap fix

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -218,7 +218,7 @@ form textarea {
 .icons-div {
   flex: 1;
   display: flex;
-  gap: 5px;
+  gap: 15px;
 }
 
 .title-date-div {
